--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 An activity stream focused child theme for BuddyPress</p>
 
 <p>--- Installation ---
-This theme doesn't work properly in IE 7 or 8 so if using IE please use IE 9</p>
+This theme doesn't work properly in IE 7 or as well in 8 so if using IE please use IE 9</p>
 
 <p>--- Status Notes---
 1. Long site titels are cut off in Toolbar just like WordPress admin bar default behaviour.
