--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@ add to a sidebar widget area.
 
 <p>--- Credits ---
 DJPaul, Hnla, Karmatosed, Ve, Mercieme (theme review) and many more BuddyPress community members</p>
+<p>--- Demo ---
+  There is a temporary demo at: http://tammielister.com/wordpress/ username: statusdemo / password: statusdemo
+</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/buddypress-themers">buddypress-themers</a></p>
