--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ add to a sidebar widget area.
 <p>--- Credits ---
 DJPaul, Hnla, Karmatosed, Ve, Mercieme (theme review) and many more BuddyPress community members</p>
 <p>--- Demo ---
-  There is a temporary demo at: <a href="http://tammielister.com/wordpress/"></a>http://tammielister.com/wordpress/</a> username: statusdemo / password: statusdemo
+  There is a temporary demo at: <a href="http://tammielister.com/wordpress/">http://tammielister.com/wordpress/</a> username: statusdemo / password: statusdemo
 </p>
       </section>
       <footer>
